[package]
name = "url-shorten"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["macros"] }
config = "0.15"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "time", "chrono" ] }
url = "2.5.7"
sqids = "0.4.2"
time = { version = "0.3", features = ["macros", "formatting"] }
dashmap = "6.1.0"
arc-swap = "1.8.0"
chrono = "0.4.43"

[dev-dependencies]
tower = { version = "0.5.1", features = ["full"] }
serde_json = "1.0"
