[package]
name = "url-shorten"
version = "0.1.0"
rust-version = "1.85.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8.7", features = ["macros"] }
base64 = "0.22"
config = "0.15"
const_format = "0.2.35"
cookie = "0.18"
thiserror = "2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7"
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres", "macros", "time" ] }
url = "2.5.7"
sqids = "0.4.2"
time = { version = "0.3", features = ["macros", "formatting"] }
dashmap = "6.1.0"
arc-swap = "1.8.0"
moka = { version = "0.12.12", features = ["future"] }
rand_core = { version = "0.6", features = ["std"] }
argon2 = "0.5"

[dev-dependencies]
tower = { version = "0.5.1", features = ["full"] }
serde_json = "1.0"
